<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/espresso"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:textSize="20sp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:layout_marginBottom="10dp"/>

    <TextView

        android:text="@string/toppings_header"
        android:textSize="20sp"
        android:textColor="#09d184"
        style="@style/HeaderTextStyle"/>

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="24dp"
        android:textColor="#09d184"
        android:text="@string/whipped_cream"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textColor="#09d184"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textColor="#09d184"
        style="@style/HeaderTextStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:textSize="20sp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:onClick="decrement"
            android:textColor="#9940ff"
            android:text="-"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:onClick="increment"
            android:textColor="#9940ff"
            android:textSize="20sp"
            android:text="+"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Order Summary"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Total: $0"
        android:textColor="#000000"
        android:textSize="16sp" />
    -->

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9cb4b0"
        android:onClick="submitOrder"
        android:text="@string/order"
        android:textSize="20sp"
        tools:ignore="UnusedAttribute" />


</LinearLayout>
